04/05/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed CGDB_ESC_KEY to 27 for the several spots still calling wgetch
    * Fixed bug where if you enter a regex and then hit ESC to cancel, the
    line would never go away.

04/03/2003 Bob Rossi <bob_rossi@cox.net>

    * interface.c ( if_draw ): Removed a function that called refresh
    on the status bar. Also, Added a check to refresh the cgdb window
    if focus == cgdb.
    * cgdb.c ( remove realpath ): There is no more call to realpath to 
    determine the breakpoint.
    * Add another hack to keep relative file from file dialog: This way
    when the user sets a breakpoint on a file opened from the file 
    dialog, the relative file is known.

04/02/2003 Bob Rossi <bob_rossi@cox.net>

    * Removed filedlg's main loop: filedlg's main loop is gone. It is now
    driven from cgdb's main loop. It recieve's a char at a time.
    * Removed call to wgetch in the process of removing filedlg's main loop
    * Removed optimizations from sources.c and scroller.c: I added a variable
    to determine if these objects needed to be displayed again. They are not
    worth the effort to maintain, since sometimes the screen NEEDS to be
    drawn again.

04/01/2003 Bob Rossi <bob_rossi@cox.net>

    * cgdb now works on windows XP in cygwin: Fixed creation of home directory.
    * Try to make configure fail if readline is not installed on system.

03/29/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed all of cgdb's to work with autoconf: All of the files that make up
    cgdb now test to see if a header is available before it is included.

03/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed cgdb to version 0.3.0 in cvs.

03/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed resizing with new input library: cgdb now writes to a pipe in the
    signal handler that gets triggered in the select loop which does the
    resize. It used to do ungetch.
    * Fixed return values of _input functions in cgdb.c: These functions would